<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context="com.android.udacity.stockhawk.ui.MainActivity">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <com.db.chart.view.LineChartView
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/durationButtons"/>

    <RelativeLayout
        android:id="@+id/durationButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button_week"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/button_week"
            android:layout_gravity="start"
            android:gravity="center" />

        <Button
            android:id="@+id/button_two_weeks"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/button_two_weeks"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_month"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/button_month"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>