...
  <string name="app_name" translatable="false">Stock Hawk</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint" translatable="false">FB</string>
  <string name="input_prefill" translatable="false"></string>
  <string name="widget_title">Today\'s Market</string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="symbol_not_found">Symbol could not be found</string>
  <string name="add_stock">Add new stock symbol</string>
  <string name="title_activity_line_graph">Overview</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="button_week">1 Week</string>
  <string name="button_two_weeks">2 Weeks</string>
  <string name="button_month">1 Month</string>
...
